--- a/mandatory1/Views/HomePage.cshtml
+++ b/mandatory1/Views/HomePage.cshtml
@@ -7,4 +7,8 @@
         <div id="main" class="wrapper clearfix">
             @Umbraco.Field("mainContent")
         </div>
+        
+        @*<div>
+            @Umbraco.RenderMacro("listNewestProjects")
+        </div>*@
     </div>
