--- a/mandatory1/Views/MacroPartials/listNewestProjects.cshtml
+++ b/mandatory1/Views/MacroPartials/listNewestProjects.cshtml
@@ -2,9 +2,5 @@
 @using Umbraco.Core.Models
 @using Umbraco.Web
 <div>
-    Model.Content.Site().Children.Where(x => x.DocumentTypeAlias == "ProjectsOverview")
-    .First()
-    .Children()Where(x => x.HasValue("projectStatus") && Umbraco.GetPreValueAsString(x.GetPropertyValue<int>("projectStatus")) == "Completed")
-    .OrderByDescending(x => x.CreateDate)
-    .Take(5)
+    @Model.Content.Site().Children.Where(x => x.DocumentTypeAlias == "projectsOverview").First().Children().Where(x => x.HasValue("projectStatus") && Umbraco.GetPreValueAsString(x.GetPropertyValue<int>("projectStatus")) == "Completed").OrderByDescending(x => x.CreateDate).Take(5)
 </div>
