--- a/mandatory1/Views/HomePage.cshtml
+++ b/mandatory1/Views/HomePage.cshtml
@@ -8,7 +8,7 @@
             @Umbraco.Field("mainContent")
         </div>
         
-        @*<div>
+    *<div>
             @Umbraco.RenderMacro("listNewestProjects")
-        </div>*@
+        </div>
     </div>
