--- a/mandatory1/Views/MacroPartials/listNewestProjects.cshtml
+++ b/mandatory1/Views/MacroPartials/listNewestProjects.cshtml
@@ -1,6 +1,14 @@
 ﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
 @using Umbraco.Core.Models
 @using Umbraco.Web
-<div>
-    @Model.Content.Site().Children.Where(x => x.DocumentTypeAlias == "projectsOverview").First().Children().Where(x => x.HasValue("projectStatus") && Umbraco.GetPreValueAsString(x.GetPropertyValue<int>("projectStatus")) == "Completed").OrderByDescending(x => x.CreateDate).Take(5)
-</div>
+
+   @*TODO does not work 
+   @{
+   var selection = Model.Content.Site().Children.Where(x => x.DocumentTypeAlias == "projectsOverview").First().Children().Where(x => x.HasValue("projectStatus") && Umbraco.GetPreValueAsString(x.GetPropertyValue<int>("projectStatus")) == "Completed").OrderByDescending(x => x.CreateDate).Take(5);
+   }
+   @foreach(var item in selection){
+   <div>
+       <a href="">@item.projectsTitle</a>
+   </div>
+   }
+   *@
