--- a/mandatory1/Views/MacroPartials/mainMenu.cshtml
+++ b/mandatory1/Views/MacroPartials/mainMenu.cshtml
@@ -13,13 +13,27 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         
-
+ 
+            
+                @*<ul class="navbar-nav mr-auto">
+                    @foreach (var menuItem in root.Children.Where("UmbracoNavHide == false")) {
+                    var isProtected = umbraco.library.IsProtected(menuItem.Id, menuItem.Path);
+                    var loginAccess = isProtected && umbraco.library.HasAccess(menuItem.Id,
+                    menuItem.Path);
+                    if (!isProtected || loginAccess) {
+                 <li class="nav-item @(menuItem.IsAncestorOrSelf(Model.Content) ? "active" : null)">
+                     <a class="nav-link" href="@menuItem.Url">@menuItem.Name</a>
+                 </li>
+            }
+            }*@
+            
             @if (selection.Length > 0)
             {
                 <ul class="navbar-nav mr-auto">
@@ -31,18 +45,9 @@
                     }
                 </ul>
             }
-            @*<li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>*@
-
+            
+            
+         
         
       
     </div>
