--- a/mandatory1/Views/Master.cshtml
+++ b/mandatory1/Views/Master.cshtml
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    
 
     <div id="header-container">
         <header class="wrapper clearfix">
@@ -50,6 +51,11 @@
         </footer>
     </div>
 
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 </body>
 
 </html>
